--- a/index.html
+++ b/index.html
@@ -86,12 +86,12 @@ body, html {
   <a href="#home">Home</a>
   <a href="#news">News</a>
    <div class="dropdown">
-    <button class="dropbtn">Dropdown 
+    <button class="dropbtn">Linux Topics 
        <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
-      <a href="http://linuxhero.tk/webapp/">webapp</a>
-      <a href="https://mail.google.com/mail/u/0/#inbox">Gmail</a>
+      <a href="http://linuxhero.tk/webapp/">What is Linux?</a>
+      <a href="https://mail.google.com/mail/u/0/#inbox">Linux Commands</a>
       <a href="#">Link 3</a>
     </div>
   </div> 
