--- a/index.html
+++ b/index.html
@@ -104,6 +104,10 @@ body, html {
       <a href="#">Link 3</a>
     </div>
   </div> 
+  <div class="navbar">
+  <a href="#about">About us</a>
+   <div class="navbar">
+  <a href="#contact">Contact us</a>
 </div>
 
 
