--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@ body, html {
       <a href="#">Link 3</a>
     </div>
   </div>
-  <a href="#about">About Me</a>
-  <a href="#contact">Contact us</a>
+  <a href="about me">About Me</a>
+  <a href="contact us">Contact us</a>
 </div>
 
 
@@ -147,8 +147,8 @@ body, html {
 <div class="w3-sand w3-grayscale w3-large">
 
 <!-- About Container -->
-<div class="w3-container">
-  <div class="w3-content" style="max-width:700px" id="About Me">
+<div class="w3-container" id="About Me">
+  <div class="w3-content" style="max-width:700px">
     <h5 class="w3-center w3-padding-64"><span class="w3-tag w3-wide">About Me</span></h5>
     <p>Over 6+ years Experienced in Linux with a demonstrated history of working in the information technology and services industry. Responsible for maintaining the health, integrity, availability, and security of all the Linux os systems globally. Apply appropriate problem solving techniques to solve complex production problems and assist with the root cause analysis. Work in a team environment to deploy solution with my knowledge.</p>
     <p>In addition to install and configure solutions, implement reusable components, translate technical requirements, assist with all stages of test data, develop interface stubs and simulators and perform script maintenance and updates.</p>
