--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@ body, html {
 <div class="w3-container">
   <div class="w3-content" style="max-width:700px">
  
-    <h5 class="w3-center w3-padding-48"><span class="w3-tag w3-wide">PRODUCTS</span></h5>
+    <h5 class="w3-center w3-padding-48"><span class="w3-tag w3-wide">New Topics Added</span></h5>
     <li><a href="https://www.bergerpaints.com/utility-tools/product-finder/">Click here for Products</a></li>
 
 <!-- Contact/Area Container -->
