--- a/index.html
+++ b/index.html
@@ -124,6 +124,7 @@ body, html {
       <a href="#">Link 3</a>
     </div>
   </div>
+  <a href="#NewTopics">New Topics</a
   <a href="#about">About Me</a>
   <a href="#contact">Contact us</a>
 </div>
@@ -142,6 +143,13 @@ body, html {
 
 <!-- Add a background color and large text to the whole page -->
 <div class="w3-sand w3-grayscale w3-large">
+  
+ <!-- NEW TOPICS --------------> 
+  <div class="w3-container">
+  <div class="w3-content" style="max-width:700px">
+ 
+    <h5 class="w3-center w3-padding-48"><span class="w3-tag w3-wide">New Topics Added</span></h5>
+    <li><a href="https://www.bergerpaints.com/utility-tools/product-finder/">Click here for Products</a></li>
 
 <!-- About Container -->
 <div class="w3-container" id="about me">
@@ -161,11 +169,7 @@ body, html {
 </div>
 
 <!-- Menu Container -->
-<div class="w3-container">
-  <div class="w3-content" style="max-width:700px">
- 
-    <h5 class="w3-center w3-padding-48"><span class="w3-tag w3-wide">New Topics Added</span></h5>
-    <li><a href="https://www.bergerpaints.com/utility-tools/product-finder/">Click here for Products</a></li>
+
 
 <!-- Contact/Area Container -->
 <div class="w3-container" style="padding-bottom:32px;">
