--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ body, html {
       <a href="#">Link 3</a>
     </div>
   </div>
-  <a href="#NewTopics">New Topics</a
+  <a href="#NewTopics">New Topics</a>
   <a href="#about">About Me</a>
   <a href="#contact">Contact us</a>
 </div>
