--- a/index.html
+++ b/index.html
@@ -145,8 +145,7 @@ body, html {
 <div class="w3-sand w3-grayscale w3-large">
   
  <!-- NEW TOPICS --------------> 
-  <div class="w3-container">
-  <div class="w3-content" style="max-width:700px" id="New Topics">
+  <div class="w3-container" style="max-width:700px" id="New Topics">
     <h5 class="w3-center w3-padding-48"><span class="w3-tag w3-wide">New Topics Added</span></h5>
     <li><a href="https://www.bergerpaints.com/utility-tools/product-finder/">Click here for Products</a></li>
 
