--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ body, html {
       <a href="#">Link 3</a>
     </div>
   </div>
-  <a href="#NewTopics">New Topics</a>
+  <a href="#topics">New Topics</a>
   <a href="#about">About Me</a>
   <a href="#contact">Contact us</a>
 </div>
@@ -147,9 +147,9 @@ body, html {
  <!-- NEW TOPICS --------------> 
   <div class="w3-container">
     <div class="w3-content" style="max-width:700px" id="New Topics">
-    <h5 class="w3-center w3-padding-48"><span class="w3-tag w3-wide">New Topics</span></h5>
+    <h5 class="w3-center w3-padding-48"><span class="w3-tag w3-wide">New Topics Added</span></h5>
     <li><a href="https://www.bergerpaints.com/utility-tools/product-finder/">Click here for Products</a></li>
-
+   </div>
 <!-- About Container -->
 <div class="w3-container" id="about me">
   <div class="w3-content" style="max-width:700px">
