--- a/index.html
+++ b/index.html
@@ -124,7 +124,6 @@ body, html {
       <a href="#">Link 3</a>
     </div>
   </div>
-  <a href="#topics">New Topics</a>
   <a href="#about">About Me</a>
   <a href="#contact">Contact us</a>
 </div>
@@ -144,14 +143,9 @@ body, html {
 <!-- Add a background color and large text to the whole page -->
 <div class="w3-sand w3-grayscale w3-large">
   
- <!-- NEW TOPICS --------------> 
-  <div class="w3-container">
-    <div class="w3-content" style="max-width:700px" id="New Topics">
-    <h5 class="w3-center w3-padding-48"><span class="w3-tag w3-wide">New Topics Added</span></h5>
-    <li><a href="https://www.bergerpaints.com/utility-tools/product-finder/">Click here for Products</a></li>
-   </div>
+ 
 <!-- About Container -->
-<div class="w3-container" id="about me">
+<div class="w3-container" id="About me">
   <div class="w3-content" style="max-width:700px">
     <h5 class="w3-center w3-padding-64"><span class="w3-tag w3-wide">About Me</span></h5>
     <p>Over 6+ years Experienced in Linux with a demonstrated history of working in the information technology and services industry. Responsible for maintaining the health, integrity, availability, and security of all the Linux os systems globally. Apply appropriate problem solving techniques to solve complex production problems and assist with the root cause analysis. Work in a team environment to deploy solution with my knowledge.</p>
