--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ body, html {
       <a href="https://mail.google.com/mail/u/0/#inbox">What are the tools of devops?</a>
       <a href="#">Link 3</a>
      </div>
-  </div>
+    </div>
    <div class="dropdown">
     <button class="dropbtn">Devops 
        <i class="fa fa-caret-down"></i>
@@ -124,6 +124,7 @@ body, html {
       <a href="#">Link 3</a>
     </div>
   </div>
+    <div class = "navbar">
     <a href="#about" class="w3-button w3-block w3-black">About Me</a>
     <a href="#contact">Contact us</a>
   </div>
