--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ body, html {
       <a href="#">Link 3</a>
     </div>
   </div>
-    <a href="#about">About</a>
+    <a href="#about">About Me</a>
     <a href="#contact">Contact us</a>
   </div>
 
@@ -144,7 +144,7 @@ body, html {
 <div class="w3-sand w3-grayscale w3-large">
   
 <!-- About Container -->
-<div class="w3-container" id="About">
+<header class="w3-container" id="About Me">
   <div class="w3-content" style="max-width:700px">
 
     <h5 class="w3-center w3-padding-64"><span class="w3-tag w3-wide">About Me</span></h5>
