--- a/index.html
+++ b/index.html
@@ -124,6 +124,7 @@ body, html {
       <a href="#">Link 3</a>
     </div>
   </div>
+    <a href="#about">New Topics</a>
     <a href="#about">About</a>
     <a href="#contact">Contact us</a>
   </div>
@@ -143,6 +144,16 @@ body, html {
 <!-- Add a background color and large text to the whole page -->
 <div class="w3-sand w3-grayscale w3-large">
   
+  
+  <div class="w3-container" style="padding-bottom:32px;" id="New Topics">
+  <div class="w3-content" style="max-width:700px">
+    <h5 class="w3-center w3-padding-48"><span class="w3-tag w3-wide">New Topics Added</span></h5>
+    <li><a href="https://www.google.com/maps/place/New++Traders/@29.3795037,78.1383345,19z/data=!3m1!4b1!4m5!3m4!1s0x390bee46af6c5a17:0x4cb012ac8388746b!8m2!3d29.3795037!4d78.1388817">Click here to find</a></li>
+    
+    <img src="/Paint1.jpg" class="w3-image" style="width:100%">
+    <p><span class="w3-tag">FYI!</span> “A satisfied customer is one who will continue to buy from you, seldom shop around, refer other customers and in general be a superstar advocate for your business.” ~ Gregory Ciotti</p>
+     <body>
+  
 <!-- About Container -->
 <div class="w3-container" id="about">
   <div class="w3-content" style="max-width:700px">
@@ -160,14 +171,7 @@ body, html {
 
 
 <!-- Contact/Area Container -->
-<div class="w3-container" style="padding-bottom:32px;">
-  <div class="w3-content" style="max-width:700px">
-    <h5 class="w3-center w3-padding-48"><span class="w3-tag w3-wide">WHERE TO FIND US</span></h5>
-    <li><a href="https://www.google.com/maps/place/New++Traders/@29.3795037,78.1383345,19z/data=!3m1!4b1!4m5!3m4!1s0x390bee46af6c5a17:0x4cb012ac8388746b!8m2!3d29.3795037!4d78.1388817">Click here to find</a></li>
-    
-    <img src="/Paint1.jpg" class="w3-image" style="width:100%">
-    <p><span class="w3-tag">FYI!</span> “A satisfied customer is one who will continue to buy from you, seldom shop around, refer other customers and in general be a superstar advocate for your business.” ~ Gregory Ciotti</p>
-     <body>
+
     <h2> Give Feedback About Our Products.</h2>
     <form action="mailto:Mdsulemanroayl23@gmail.com" method="get" enctype="text/plain">
       <p><strong>Name: <input type="text" name="name"/></p>
