--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@ body, html {
   
   <div class="w3-container" style="padding-bottom:32px;" id="New Topics">
   <div class="w3-content" style="max-width:700px">
-    <h5 class="w3-center w3-padding-48"><span class="w3-tag w3-wide">New Topics Added</span></h5>
+    <h5 class="w3-center w3-padding-48"><span class="w3-tag w3-wide">New Topics</span></h5>
     <li><a href="https://www.google.com/maps/place/New++Traders/@29.3795037,78.1383345,19z/data=!3m1!4b1!4m5!3m4!1s0x390bee46af6c5a17:0x4cb012ac8388746b!8m2!3d29.3795037!4d78.1388817">Click here to find</a></li>
     
     <img src="/Paint1.jpg" class="w3-image" style="width:100%">
