--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ body, html {
 <!-- Header with image -->
 <header class="bgimg w3-display-container w3-grayscale-min" id="Home">
   <div class="w3-display-bottomleft w3-center w3-padding-large w3-hide-small">
-    <marquee behavior="scroll" bgcolor="#d9d9ff" direction="Right">The Linux philosophy is 'Laugh in the face of danger'. Oops. Wrong One. 'Do it yourself'. Yes, that's it. ~ Linus Torvalds</marquee>   
+    <marquee behavior="scroll" bgcolor="#d9d9ff" direction="left">"The Linux philosophy is 'Laugh in the face of danger'. Oops. Wrong One. 'Do it yourself'. Yes, that's it". ~ Linus Torvalds</marquee>   
   </div>
   <div class="w3-display-bottomright w3-center w3-padding-large">
     <marquee behavior="scroll" bgcolor="#d9d9ff" direction="left">Email me if you want any particular topic.</marquee>
