--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ body, html {
         <i class="fa fa-caret-down"></i>
      </button>
      <div class="dropdown-content">
-      <a href="http://linuxhero.tk/whatislinux?">What is Linux?</a>
+      <a href="http://linuxhero.tk/webapp">What is Linux?</a>
       <a href="https://mail.google.com/mail/u/0/#inbox">Linux Commands</a>
       <a href="#">Link 3</a>
      </div>
